# sigma-backend

./: .gitignore  DEPLOYMENT.md  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 26971d5ada94_initial_migration.py  acde5a6305c5_create_core_tables.py  fbe3768827e8_add_area_m2_fields.py  fbe3768827e8_add_pixel_coverage_analysis_tables.py
app/: __init__.py  main.py
app/core/: config.py  db.py
app/models/: __init__.py  models.py
app/routers/: __init__.py  aggregations.py  catalogs.py  imports.py  regions.py  reports.py  scenes.py  segments.py  subregions.py  tiff_validation.py
app/schemas/: schemas.py
app/services/: aggregations_service.py  dl_segmentation_service.py  progress_service.py  reports_service.py  segmentation_raster_service.py  segments_service.py
app/utils/: geo.py  tiff_metadata_extractor.py  tiff_validator.py
