[project]
name = "sigma-backend"
version = "0.1.0"
description = "SIGMA geospatial backend with FastAPI, SQLAlchemy, and PostGIS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.123.4",
    "geoalchemy2>=0.18.1",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "psycopg[binary]>=3.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyproj>=3.7.2",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "rasterio>=1.4.3",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.44",
    "tensorflow>=2.20.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.7",
]
